<resources>
    <string name="app_name">虎匠智能</string>
    <string name="picture">图片</string>
    <string name="me">我的</string>
    <string name="settings">设置</string>
    <string name="ok">好的</string>
    <string name="cancel">取消</string>
    <string name="sign_in">登录</string>
    <string name="sign_out">退出登录</string>
    <string name="sign_up">注册</string>
    <string name="sign_out_tip">确定要退出登录当前用户吗？</string>
    <string name="account">账户</string>
    <string name="password">密码</string>
    <string name="sign_in_failed">登录失败，请重试</string>
    <string name="all">全部</string>
    <string name="done">完成</string>
    <string name="loading">正在加载&#8230;</string>
    <string name="ocr_loading">正在识别&#8230;</string>
    <string name="loading_done">加载完成</string>
    <string name="loading_failed">加载失败</string>
    <string name="server_response_failure">网络请求失败，请重试</string>
    <string name="swipe_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">释放开始刷新</string>
    <string name="swipe_to_load_more">上拉加载更多</string>
    <string name="release_to_load_more">释放加载更多</string>
    <string name="no_more_data">没有更多数据了</string>
    <string name="empty_data">暂无数据</string>
    <string name="clear_cache">清除缓存</string>
    <string name="clear">清除</string>
    <string name="waiting_for_clear_cache">正在清除缓存，请稍候&#8230;</string>
    <string name="clear_cache_success">清除缓存成功</string>
    <string name="clear_cache_failed">清除缓存失败</string>
    <string name="use_cellular_to_upload">使用3G/4G上传</string>
    <string name="about_us">关于我们</string>
    <string name="contact_us">联系客服</string>
    <string name="bank_card">银行卡</string>
    <string name="my_bank_card">我的银行卡</string>
    <string name="add_bank_card">添加银行卡</string>
    <string name="monday">周一</string>
    <string name="tuesday">周二</string>
    <string name="wednesday">周三</string>
    <string name="thursday">周四</string>
    <string name="friday">周五</string>
    <string name="saturday">周六</string>
    <string name="sunday">周日</string>
    <string name="position">位置</string>
    <string name="address">地址</string>
    <string name="kind_tip">虎匠智能</string>
    <string name="list">列表</string>
    <string name="capture_image_failed">拍照失败，请重新拍照</string>
    <string name="delete">删除</string>
    <string name="uploading_images">正在上传图片，请稍候&#8230;</string>
    <string name="upload_image_failed">上传图片失败，请重试</string>
    <string name="double_back_exit">再次点击退出App</string>
    <string name="current_version">当前版本</string>
    <string name="current_version_format">当前版本：%s</string>
    <string name="check_update">检查更新</string>
    <string name="already_newest_version">已经是最新版本</string>
    <string name="confirm">确定</string>
    <string name="city">城市</string>
    <string name="region">地区</string>
    <string name="batch">批量</string>
    <string name="type_label">类型</string>
    <string name="unit_price_label">单价</string>
    <string name="total_price_label">金额</string>
    <string name="count_label">数量</string>
    <string name="select_all">全选</string>
    <string name="project">项目</string>
    <string name="company">公司</string>
    <string name="real_name_reg">实名登记</string>
    <string name="face_attend">人脸考勤</string>
    <string name="worker_info">人员信息</string>
    <string name="save_change">保存修改</string>
    <string name="attend_history">考勤记录</string>
    <string name="today_attend_format">今日考勤%d人</string>
    <string name="load_projects_failed">获取项目列表失败</string>
    <string name="project_hint">请选择项目</string>
    <string name="account_hint">请输入账号</string>
    <string name="password_hint">请输入密码</string>
    <string name="take_card">扫描卡片</string>
    <string name="take_id_card_front">扫描身份证正面</string>
    <string name="take_id_card_back">扫描身份证背面</string>
    <string name="take_bank_card_front">扫描银行卡正面</string>
    <string name="take_bank_card_back">扫描银行卡背面</string>
    <string name="scan_card_tip">请将卡片置于扫描框内</string>
    <string name="id_card_front_info">身份证正面信息</string>
    <string name="id_card_back_info">身份证背面信息</string>
    <string name="bank_card_info">银行卡信息</string>
    <string name="id_no">身份证号</string>
    <string name="name">姓名</string>
    <string name="sex">性别</string>
    <string name="nation">民族</string>
    <string name="birthday">出生日期</string>
    <string name="live_address">详细住址</string>
    <string name="id_issuer">签发机关</string>
    <string name="id_valid_date">有效期限</string>
    <string name="bank_no">银行卡号</string>
    <string name="bank_name">开户行</string>
    <string name="next">下一步</string>
    <string name="face_id_verify">人证比对</string>
    <string name="change_face_id_verify">人脸修改</string>
    <string name="face_detect_tip">温馨提示：仅实时检测画面内面积最大的人脸</string>
    <string name="ocr_info_invalid_tip">识别结果不正确，请重新扫描</string>
    <string name="retry_scan">重新扫描</string>
    <string name="cancel_register">退出登记</string>
    <string name="face_id_card_not_match_tip">人证比对失败，请重新比对</string>
    <string name="face_attend_failed_tip">人脸考勤失败，请重新识别</string>
    <string name="face_attend_succeed_score_format">人脸考勤成功，分数：%s</string>
    <string name="face_attend_failed_score_format">人脸考勤失败，分数：%s</string>
    <string name="face_attend_no_permission">人脸考勤失败，无权限</string>
    <string name="face_id_card_verify_succeed">人证比对成功，点击下一步识别身份证背面</string>
    <string name="additional_info">补充信息</string>
    <string name="belong_project">所属项目</string>
    <string name="belong_company">所属分包商</string>
    <string name="belong_team">班组</string>
    <string name="empCategory">人员类型</string>
    <string name="jobTypeName">岗位</string>


    <string name="is_team_leader">是否班组长</string>
    <string name="is_contract_upload">劳动合同已上传</string>
    <string name="is_entrance_upload">进场承诺书已上传</string>
    <string name="is_exit_upload">退场承诺书已上传</string>
    <string name="is_work_upload">工作确认书已上传</string>
    <string name="is_iDCardPDF_upload">身份证已上传</string>

    <string name="work_type">工种</string>
    <string name="hot_work_type">热门工种</string>
    <string name="all_work_type">全部工种</string>
    <string name="phone">手机号码</string>
    <string name="input_invalid">输入错误，请重输</string>
    <string name="please_input_phone">请输入正确的手机号码</string>
    <string name="please_select_project">请选择所属项目</string>
    <string name="please_select_company">请选择所属分包商</string>
    <string name="please_select_team">请选择班组</string>
    <string name="please_select_jobTypeName">请选择岗位</string>
    <string name="please_select_empCategory">请选择人员类型</string>
    <string name="please_select_work_type">请选择工种</string>
    <string name="please_select_bank">请选择开户银行</string>
    <string name="please_select_entrance_date">请选择进场日期</string>
    <string name="confirm_info">确认信息</string>
    <string name="submit_info">提交信息</string>
    <string name="change_password">修改登录密码</string>
    <string name="face_attend_camera">考勤摄像头</string>
    <string name="front_camera">前置</string>
    <string name="back_camera">后置</string>
    <string name="switch_project">切换项目</string>
    <string name="attend_in">上班打卡</string>
    <string name="attend_out">下班打卡</string>
    <string name="need_collect_bank_card_prompt">是否需要识别并采集银行卡信息？</string>
    <string name="skip">跳过</string>
    <string name="collect">采集</string>
    <string name="cancel_register_tip">确定要退出实名登记吗？</string>
    <string name="exit">退出</string>
    <string name="sign_up_failed">登记失败，请重试或联系管理人员</string>
    <string name="sign_up_succeed">工人实名登记成功</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="search_work_type">搜索工种</string>
    <string name="hujiang_company">深圳市虎匠科技投资发展有限公司</string>
    <string name="old_password">&#8195;原密码：</string>
    <string name="new_password">&#8195;新密码：</string>
    <string name="confirm_password">确认密码：</string>
    <string name="old_password_hint">请输入原密码</string>
    <string name="new_password_hint">请输入新密码</string>
    <string name="confirm_password_hint">请再次输入新密码</string>
    <string name="password_empty">密码不能为空</string>
    <string name="new_password_not_match">新密码两次输入不一致</string>
    <string name="change_password_success">修改密码成功</string>
    <string name="change_password_failed">修改密码失败</string>
    <string name="attend_time">考勤时间</string>
    <string name="save_success">保存成功</string>
    <string name="save_failed">保存失败</string>
    <string name="entrance_date">进场日期</string>
    <string name="username">用户名</string>
    <string name="face_attend_time_interval">人脸考勤时间间隔</string>
    <string name="time_seconds">%d秒</string>
    <string name="face_attend_time_too_short">人脸考勤间隔太短，忽略本条考勤数据</string>
    <string name="sync_worker_info">同步人员信息</string>
    <string name="sync_worker_info_success">同步人员信息成功</string>
    <string name="sync_worker_info_failed">同步人员信息失败，请稍后重试</string>
</resources>
