<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.SettingsActivity"
    android:background="@color/white">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/avator_bg"
                android:layout_gravity="center_horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icon_settings_avator"
                    android:layout_centerInParent="true"/>

            </RelativeLayout>

            <TextView
                android:id="@+id/userTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium.Inverse"
                android:textColor="@color/black25PercentColor"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="30dp"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/light_gray"/>

            <LinearLayout
                android:id="@+id/cellProject"
                android:layout_width="match_parent"
                android:layout_height="@dimen/list_row_height"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/settings_cell_margin"
                    android:layout_marginEnd="@dimen/settings_text_margin"
                    android:src="@drawable/icon_settings_project" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:text="@string/switch_project"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium.Inverse"
                    android:textColor="@color/black25PercentColor" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="@dimen/settings_cell_margin"
                    android:src="@drawable/right_arrow" />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/light_gray"/>

            <LinearLayout
                android:id="@+id/cellPassword"
                android:layout_width="match_parent"
                android:layout_height="@dimen/list_row_height"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/settings_cell_margin"
                    android:layout_marginEnd="@dimen/settings_text_margin"
                    android:src="@drawable/icon_settings_password" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:text="@string/change_password"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium.Inverse"
                    android:textColor="@color/black25PercentColor" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="@dimen/settings_cell_margin"
                    android:src="@drawable/right_arrow" />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/light_gray"/>

            <LinearLayout
                android:id="@+id/cellCamera"
                android:layout_width="match_parent"
                android:layout_height="@dimen/list_row_height"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/settings_cell_margin"
                    android:layout_marginEnd="@dimen/settings_text_margin"
                    android:src="@drawable/icon_settings_camera" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/face_attend_camera"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium.Inverse"
                    android:textColor="@color/black25PercentColor" />

                <TextView
                    android:id="@+id/cameraTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:text="@string/front_camera"
                    android:gravity="end"
                    android:layout_marginEnd="4dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium.Inverse"
                    android:textColor="@color/black50PercentColor" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="@dimen/settings_cell_margin"
                    android:src="@drawable/right_arrow" />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/light_gray"/>

            <LinearLayout
                android:id="@+id/cellInterval"
                android:layout_width="match_parent"
                android:layout_height="@dimen/list_row_height"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/settings_cell_margin"
                    android:layout_marginEnd="@dimen/settings_text_margin"
                    android:src="@drawable/icon_settings_time_interval" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/face_attend_time_interval"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium.Inverse"
                    android:textColor="@color/black25PercentColor" />

                <TextView
                    android:id="@+id/intervalTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:text="@string/time_seconds"
                    android:gravity="end"
                    android:layout_marginEnd="4dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium.Inverse"
                    android:textColor="@color/black50PercentColor" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="@dimen/settings_cell_margin"
                    android:src="@drawable/right_arrow" />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/light_gray"/>

            <LinearLayout
                android:id="@+id/cellSyncWorker"
                android:layout_width="match_parent"
                android:layout_height="@dimen/list_row_height"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/settings_cell_margin"
                    android:layout_marginEnd="@dimen/settings_text_margin"
                    android:src="@drawable/icon_settings_sync" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:text="@string/sync_worker_info"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium.Inverse"
                    android:textColor="@color/black25PercentColor" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="@dimen/settings_cell_margin"
                    android:src="@drawable/right_arrow" />

            </LinearLayout>

            <RelativeLayout
                android:id="@+id/syncWorkerLine"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/light_gray"/>

            <LinearLayout
                android:id="@+id/cellAboutUs"
                android:layout_width="match_parent"
                android:layout_height="@dimen/list_row_height"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/settings_cell_margin"
                    android:layout_marginEnd="@dimen/settings_text_margin"
                    android:src="@drawable/icon_settings_about_us" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:text="@string/about_us"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium.Inverse"
                    android:textColor="@color/black25PercentColor" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="@dimen/settings_cell_margin"
                    android:src="@drawable/right_arrow" />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/light_gray"/>

            <Button
                android:id="@+id/signOutButton"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:text="@string/sign_out"
                android:textColor="@color/white"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium.Inverse"
                android:background="@drawable/corner_red_button"
                android:layout_marginTop="40dp"/>
            
            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>