<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.SignInActivity"
    android:background="@drawable/blue_background"
    android:fitsSystemWindows="true">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/logo"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="80dp"
                android:layout_marginBottom="50dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="40dp"
                android:paddingEnd="40dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_background"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:gravity="center_vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/icon_account" />

                    <EditText
                        android:id="@+id/editTextAccount"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:maxLines="1"
                        android:textColor="@color/black25PercentColor"
                        android:inputType="textPersonName"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:background="@android:color/transparent"
                        android:layout_marginStart="10dp"
                        android:hint="@string/account_hint"/>

                    <ImageButton
                        android:id="@+id/imageButtonClearAccount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/icon_clear"
                        android:background="?android:attr/selectableItemBackground"/>

                </LinearLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="16dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_background"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:gravity="center_vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/icon_password" />

                    <EditText
                        android:id="@+id/editTextPassword"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:maxLines="1"
                        android:textColor="@color/black25PercentColor"
                        android:inputType="textPassword"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:background="@android:color/transparent"
                        android:layout_marginStart="10dp"
                        android:hint="@string/password_hint"/>

                    <ImageButton
                        android:id="@+id/imageButtonClearPassword"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/icon_clear"
                        android:background="?android:attr/selectableItemBackground"/>

                </LinearLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="30dp" />

                <Button
                    android:id="@+id/buttonSignIn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_login"
                    android:text="@string/sign_in"
                    android:textSize="20sp"
                    android:textColor="@color/white"/>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>